force-app/main/default/objects/Additional_Charges__c/fields/Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charges__c</fullName>
    <label>Additional Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Particulars</fullName>
            </value>
            <value>
                <fullName>Legal and Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>