force-app/main/default/objects/Additional_Charges__c/fields/Final_Charges__c.field-meta.xml
<CustomField>
    <fullName>Final_Charges__c</fullName>
    <label>Final Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>