force-app/main/default/objects/Additional_Charges__c/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <label>Plot</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>