force-app/main/default/objects/Additional_Charges__c/fields/Price_per_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Price_per_sq_ft__c</fullName>
    <label>Price per sq. ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>