force-app/main/default/objects/Additional_Charges__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <label>Values</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Additional_Charges__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price For North East</fullName>
            </value>
            <value>
                <fullName>Other Corners</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>100 Ft Road Plots</fullName>
            </value>
            <value>
                <fullName>Premium Plots</fullName>
            </value>
            <value>
                <fullName>Rate Per Sq. Yd</fullName>
            </value>
            <value>
                <fullName>Legal And Documentation Charges</fullName>
            </value>
            <value>
                <fullName>Registration Charges As Applicable On The Day Of Registration</fullName>
            </value>
            <value>
                <fullName>Corpus Fund and Club House Payable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>