force-app/main/default/objects/Additional_Charges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plot__c</columns>
    <columns>Phase__c</columns>
    <columns>Additional_Charges__c</columns>
    <columns>Values__c</columns>
    <columns>Charges__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>